# PyalData

./: .gitignore  README.md  Tools.py  pyaldata_demo.ipynb  pyproject.toml  setup.py  test.py
.github/workflows/: ruff.yml  run_tests.yml
pyaldata/: Tools.py  __init__.py  array_utils.py  cmp.py  data_cleaning.py  df_utils.py  dim_reduction.py  extract_signals.py  firing_rates.py  integrity_checks.py  interval.py  io.py  movement_onset.py  movement_onset_and_peak.py  regression.py  signal_transformations.py  signals.py  smoothing.py  tools.py  utils.py
tests/: test_data_cleaning.py  test_determine_ref_field.py  test_get_time_varying_fields.py  test_get_trial_length.py  test_trial_average.py
