[tool.poetry]
name = "pyaldata"
version = "0.2.0"
description = "Python implementation of TrialData, a library for simplifying the analysis of trial-based data from neuroscience experiments"
authors = ["Matt Perich", "Catia Fortunato", "Raeed Chowdhury", "Bence Bagi", ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.2"
scipy = "^1.13.0"
mat73 = "^0.63"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 92

[tool.ruff]
line-length = 92

[tool.ruff.lint]
extend-select = ["I"]

[tool.isort]
multi_line_output = 3
line_length = 92
include_trailing_comma = true
